[package]
name = "tcpproxy"
version = "0.1.0"
authors = ["Leo Wurzer <leo.wurzer1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
ratelimit_meter = "5.0.0"
nonzero_ext = "0.2.0"
